--- a/myproject/crud/templates/show.html
+++ b/myproject/crud/templates/show.html
@@ -26,7 +26,7 @@
 						<td>{{s.sname}}</td>
 						<td>{{s.scontact}}</td>
 						<td>
-							<a href="update/{{s.id}}"  class="btn btn-sm btn-info">Edit</a>
+							<a href="/update/{{s.id}}"  class="btn btn-sm btn-info">Edit</a>
 							<a href="/delete/{{s.id}}" class="btn btn-sm btn-danger">Delete</a>
 
 
